test/testdata/functions/missing_1_arg_error.lox
fun add(a, b) {
  print a + b;
}

add(1); // error: add() accepts 2 arguments but 1 was given
